# bipca

./: .gitignore  README.md  bipca-dev.dockerfile  experiment-environment.yml
experiments/: dataset_parameters.csv
experiments/benchmark_svd/: benchmark_sparsedense.py
experiments/pbmcs/: filter_pbmcs.py
matlab/: README  sinkhorn.m
python/: .gitignore  LICENSE  MarchenkoPastur.py  README.rst  biscaling_PCA.py  experiments-requirements.txt  parallel_analysis.py  pyproject.toml  requirements.txt  setup.py  setup.py.bak
python/bipca/: __init__.py  _bipca.py  base.py  bipca.py  bipca.py.save  command_line.py  data_examples.py  experiments.py  math.py  plotting.py  safe_basics.py  sinkhorn_docstring.bak  utils.py  version.py
python/bipca/experiments/: __init__.py  _experiments.py  base.py  datasets.py  exceptions.py  experiments.py  modalities.py  normalizations.py  types.py  utils.py
python/bipca/experiments/datasets/: allcools_preprocess.sh  base.py  datasets.py  modalities.py  plink_preprocess.sh  utils.py
python/bipca/experiments/figures/: base.py  figures.py  plotting_constants.py  utils.py
python/bipca/math/: _math.py  _scipy_math.py  _torch_math.py
python/doc/: conf.py  index.rst  requirements.txt
python/doc/_static/: numpy.css
python/doc/_templates/: indexcontent.html
python/doc/_templates/autosummary/: base.rst  member.rst  method.rst  nested_class.rst
python/doc/reference/: bipca.rst  defs.hrst  index.rst  math.Sinkhorn.rst  math.rst
python/doc/source/: conf.py  index.rst
python/tests/: speedtest.py  test_base.py  test_bipca.py  test_command_line.py  test_experiments.py  test_math.py  test_utils.py  testing_utils.py  utils.py
python/tests/test_data/: __init__.py  pbmc3k_filtered.h5ad  pbmc3k_filtered_sparse.h5ad
python/tutorials/: tutorial-0-quick_start.ipynb  tutorial-1-pbmc_scrna_scanpy.ipynb
